--- a/secret.yaml
+++ b/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 stringData:
-  telegram-token: "5351429693:AAEIT1ZuXmqrVZ8S11dHj3l8qU8d3j36qzs"
+  telegram-token: "5...3:A...s"
 metadata:
   name: argocd-notifications-secret
   namespace: argocd
